La gestion de usuario donde este guarda una relacion con DOCUMENTOS IDENTIDAD de 1 - M y guarda una relacion de M-M con Paises solo falta por ACTUALIZAR, ELIMINAR. Y al momento de agregar los paises tambien falta la eliminacion de estos. Del resto todo esta funcionando mas no estable, hay que revisar para estandarizar las variables usadas.
Se creo un archivo (usuarios_1.xhtml) donde se prueba todo el funcionamiento solo de los USUARIOS. Se detecto un error en diseño de BD y el registro total no se pudo realizar como se debe. Se confirma el estado este proyecto con el fin de volver a crear las clases con el nuevo diseño de la BD. Siendo este el Diseño que se establecera para los proyectos.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>usuarios.jsf</welcome-file>
+        <welcome-file>documentosIdentidad.jsf</welcome-file>
     </welcome-file-list>
 </web-app>
