--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.18-bin.jar=/Applications/NetBeans/NetBeans 7.2.1.app/Contents/Resources/NetBeans/ide/modules/ext/mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar=lib/mysql-connector-java-5.1.18-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
